--- a/index.html
+++ b/index.html
@@ -5,56 +5,102 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/style.css">  
   <title>Frontend Mentor | News homepage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
+  <div class="container">
+    <header>
+      <div class="logo"><img src="./assets/images/logo.svg" alt="Logo"></div>
+      <div class="menu">
+        <div class="menu_hamburguesa">
+          <div class="menu_hamburguesa_open"><img src="./assets/images/icon-menu.svg" alt="open menu"></div>
+          <div class="menu_hamburguesa_close"><img src="./assets/images/icon-menu-close.svg" alt="close menu"></div>
+        </div>
+      </div>
+    </header>
+
+    <div class="hero">
+      <div class="hero_img">
+        <!-- Imagen principal -->
+        <picture>
+          <source srcset="./assets/images/image-web-3-desktop.jpg" media="(min-width: 600px)">
+          <img src="./assets/images/image-web-3-mobile.jpg" alt="">
+        </picture>  
+      </div>
+
+        <!-- Contenido inferior -->
+        <div class="hero_content">
+          <!-- Titulo -->
+          <div class="hero_title">The Bright Future of Web 3.0?</div>
+          
+          <div class="hero_text">
+            <!-- Texto-->
+            <div class="hero_text_content">
+              We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+              But is it really fulfilling its promise?
+            </div>
+            <!-- Read more -->
+            <div class="hero_text_button">Read more</div>
+        </div>
+    </div>
+
+    <aside>
+      <div class="aside_title">New</div>
+      <div class="news">
+        <div class="new">
+          <div class="new_title">Hydrogen VS Electric Cars</div>
+          <div class="new_text">Will hydrogen-fueled cars ever catch up to EVs?</div>
+        </div>
+
+        <div class="new">
+          <div class="new_title">The Downsides of AI Artistry</div>
+          <div class="new_text">What are the possible adverse effects of on-demand AI image generation?</div>
+        </div>
+
+        <div class="new">
+          <div class="new_title">Is VC Funding Drying Up?</div>
+          <div class="new_text">Private funding by VC firms is down 50% YOY. We take a look at what that means.</div>
+        </div>
+      </div>
+    </aside>
+
+    <section class="bottom_content">
+      <div class="bottom_new">
+        <div class="bottom_new_img"><img src="./assets/images/image-retro-pcs.jpg" alt="New preview Reviving Retro PCs"></div>
+        <div class="bottom_new_content">
+          <div class="bottom_new_content_number">01</div>
+          <div class="bottom_new_content_title">Reviving Retro PCs</div>
+          <div class="bottom_new_content_text">What happens when old PCs are given modern upgrades?</div>
+        </div>
+      </div>
+
+      <div class="bottom_new">
+          <div class="bottom_new_img"><img src="./assets/images/image-top-laptops.jpg" alt="New preview Top 10 Laptops of 2022"></div>
+          <div class="bottom_new_content">
+            <div class="bottom_new_content_number">02</div>
+            <div class="bottom_new_content_title">Top 10 Laptops of 2022</div>
+            <div class="bottom_new_content_text">Our best picks for various needs and budgets.</div>
+          </div>
+      </div>
+
+      <div class="bottom_new">
+            <div class="bottom_new_img"><img src="./assets/images/image-gaming-growth.jpg" alt="New preview The Growth of Gaming"></div>
+            <div class="bottom_new_content">
+              <div class="bottom_new_content_number">03</div>
+              <div class="bottom_new_content_title">The Growth of Gaming</div>
+              <div class="bottom_new_content_text">How the pandemic has sparked fresh opportunities.</div>
+            </div>
+      </div>
+    </section>
+  </div>
   Home
   New
   Popular
   Trending
   Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
