--- a/index.html
+++ b/index.html
@@ -12,24 +12,39 @@
 <body>
 
   <div class="container">
-    <header>
+    <header id="cabecera">
       <div class="logo"><img src="./assets/images/logo.svg" alt="Logo"></div>
       <div class="menu">
-        <div class="menu_hamburguesa">
+        <div class="menu_hamburguesa" id="menu_hamburguesa">
           <div class="menu_hamburguesa_open"><img src="./assets/images/icon-menu.svg" alt="open menu"></div>
           <div class="menu_hamburguesa_close"><img src="./assets/images/icon-menu-close.svg" alt="close menu"></div>
         </div>
 
-        <nav>
-          <ul>
-            <li>Home</li>
-            <li>New</li>
-            <li>Popular</li>
-            <li>Trending</li>
-            <li>Categories</li>
-          </ul>
-        </nav>
       </div>
+      <nav>
+        <ul>
+          <li> 
+            <i class="fa-solid fa-house"></i>
+            <span>Home</span>
+          </li>
+          <li> 
+            <i class="fa-regular fa-bell"></i>
+            <span>New</span>
+          </li>
+          <li> 
+            <i class="fa-solid fa-fire"></i>
+            <span>Popular</span> 
+          </li>
+          <li> 
+            <i class="fa-solid fa-glasses"></i>
+            <span>Trending</span> 
+          </li>
+          <li> 
+            <i class="fa-solid fa-list"></i>
+            <span>Categories</span> 
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <section class="content">
@@ -112,5 +127,8 @@
     </section>
   </div>
   
+
+  <script src="./js/index.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </body>
 </html>
